--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <link rel="icon" type="image/svg+xml" href="/media/sflogo.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/sflogo.svg" />
+    <link rel="icon" type="image/png" href="/fox-logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/fox-logo.png" />
     <link
       rel="icon"
-      type="image/svgLogo"
+      type="image/png"
       sizes="32x32"
-      href="/media/sflogo.svg"
+      href="/fox-logo.png"
     />
     <link
       rel="icon"
-      type="image/svgLogo"
+      type="image/png"
       sizes="16x16"
-      href="/media/sflogo.svg"
+      href="/fox-logo.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=DM+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
